0.4.2
Added symbol menu plugin.
Speed tweaks for restore session.
Moving line/selection off the top/bottom of page with shortcutkey now scroll's a couple of lines before.
Added --no-autosession,-a to options to temporarily disable auto loading/saving of session.
Fixed segfault on open hexdump.
Auto save/restore session now disabled in safe mode ( -s ).
Fixed displaying total number of replacements on status bar.
Fixed replace all missing matches too close together.
Fixed replaceall speed ( again! ).
Redone 'Replace All'.
Find now doesn't show hidden tabs if no match found ( regex find still to do ).
Cleaned find code.
Fixed find when docview is in a tab.
Inbuilt docviewer can now be showed either in a seperate window or in a tab in the editor, can be set in the prefs ("Show Docviewer In A Window")
Added docviewer to new tab in editor.
Added 'INFO' command to progress bar to set extra info, see testbar example for usage.
Speed tweaks for loading session.
Open recent now works in gtk3 on *buntu ( 'til they break it again ).
Open recent menu now updates properly.
Added manpage for kkeditmsg.
Changed user marks so all can be visible on the same line.
Started docs for kkeditmsg.
Added extra script commands:
Quit GotoLine SearchDef SelectTab SelectTabByPath Bookmark CloseTab SetMark UnsetMark MoveTo SelectBetween Paste Copy Cut InsertText InsertNL InsertFile PrintFiles WaitForKKEdit ShowContinue RunTool RestoreSession ActivateMenuNamed ActivateMenuLabeled SendPosData.
Added some extra example sripts to goodies.
Can now do a wait for session to finish loading.
Removed obsolete 'ActivateMenu' from scripting.
Updated clipboardplugin for new scripting commands.
Updated sessionmanager plugin for new scripting commands.