@@ -1,4 +1,5 @@
 0.4.2
+Updated copyright notice in about boxes.
 Added symbol menu plugin.
 Speed tweaks for restore session.
 Moving line/selection off the top/bottom of page with shortcutkey now scroll's a couple of lines before.
